2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/jpeg/gstjpegdec.c: (gst_jpegdec_init_source),
	(gst_jpegdec_fill_input_buffer), (gst_jpegdec_skip_input_data),
	(gst_jpegdec_resync_to_restart), (gst_jpegdec_term_source),
	(gst_jpegdec_init), (gst_jpegdec_chain):
	* gst/multipart/multipartdemux.c: (gst_multipart_demux_init),
	(gst_multipart_demux_chain), (gst_multipart_demux_change_state):
	  cleanups, debugging fixes and memleak plugging

2004-08-09  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoradec.c: (gst_theora_dec_class_init),
	(theora_get_formats), (theora_dec_src_convert),
	(theora_dec_sink_convert), (theora_dec_src_query),
	(theora_dec_src_event), (theora_dec_event), (theora_dec_chain),
	(theora_dec_change_state):
	Don't crash on missing header packets.

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/sq.po:
	  Added Albanian translation (Laurent Dhima)
	* po/cs.po:
	  updated

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/lame/gstlame.c:
	  fix/add debugging

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/ximage/ximagesink.c:
	* sys/xvimage/xvimagesink.c:
	  assign all TOO_LAZY's to a real category.  Thanks to Warthy Warthog.

2004-08-06  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init),
	(gst_multifdsink_add), (gst_multifdsink_get_stats),
	(gst_multifdsink_client_remove),
	(gst_multifdsink_handle_client_read),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_queue_buffer), (gst_multifdsink_handle_clients):
	Make sure we don't try to read more from a client that what 
	ioctl says us or we deadlock.

2004-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/videotestsrc/gstvideotestsrc.c: (gst_videotestsrc_src_link),
	(gst_videotestsrc_change_state), (gst_videotestsrc_src_query),
	(gst_videotestsrc_handle_src_event), (gst_videotestsrc_get):